--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,6 @@ pids
 *.seed
 *.pid.lock
 
-
 # Dependency directories
 node_modules/
 
@@ -23,9 +22,15 @@ node_modules/
 # Optional eslint cache
 .eslintcache
 
-
 # dotenv environment variables file
 .env
 
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
+
+### Firebase ###
+**/.firebaserc
+
+### Firebase Patch ###
+.runtimeconfig.json
+.firebase/
