--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Book an appointment, persist the data to firebase and receive a confirmation SMS",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node script/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -14,7 +14,9 @@
   ],
   "author": "Amanda Cavallaro",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.17.1"
+  },
   "devDependencies": {
     "@vonage/server-sdk": "^2.10.8",
     "firebase-admin": "~8.0.0",
