--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "appointment-booker",
   "version": "1.0.0",
   "description": "Book an appointment, persist the data to firebase and receive a confirmation SMS",
-  "main": "index.js",
+  "main": "script/server.js",
   "scripts": {
     "start": "node script/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,11 +15,10 @@
   "author": "Amanda Cavallaro",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
-  },
-  "devDependencies": {
-    "@vonage/server-sdk": "^2.10.8",
-    "firebase-admin": "~8.0.0",
+    "@vonage/server-sdk": "^2.10.10",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "firebase-admin": "^9.10.0",
     "firebase-functions": "^3.1.0"
   }
 }
