Adds uuid, updates firebase rules and readme

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ node_modules/
 ### Firebase ###
 **/.firebaserc
 serviceAccountKey.json
+.firebaserc
 
 ### Firebase Patch ###
 .runtimeconfig.json
