--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-FIREBASE_DATABASE_URL
-VONAGE_API_KEY
-VONAGE_API_SECRET
-VONAGE_FROM_NUMBER
-VONAGE_TO_NUMBER
+FIREBASE_DATABASE_URL=
+VONAGE_API_KEY=
+VONAGE_API_SECRET=
+VONAGE_FROM_NUMBER=Vonage
+VONAGE_TO_NUMBER=
