--- a/firebase.json
+++ b/firebase.json
@@ -1,5 +1,10 @@
 {
   "database": {
     "rules": "database.rules.json"
+  },
+  "functions": {
+    "predeploy": [
+    ],
+    "source": "functions"
   }
 }
