--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
   "author": "Amanda Cavallaro",
   "license": "ISC",
   "dependencies": {
-    "@vonage/server-sdk": "^2.10.10",
+    "@vonage/server-sdk": "^2.10.11",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "firebase-admin": "^9.10.0",
     "firebase-functions": "^3.1.0",
+    "firebase-tools": "^10.7.2",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.14.0"
   }
 }
