--- a/serviceAccountKey.json.example
+++ b/serviceAccountKey.json.example
@@ -1,7 +1,7 @@
 {
   "type": "service_account",
   "project_id": "",
-  "private_key_id": ""
+  "private_key_id": "",
   "private_key": "",
   "client_email": "",
   "client_id": "",
